fixed vertical alignment of stacked mini icon

--- a/less/stacked.less
+++ b/less/stacked.less
@@ -25,7 +25,7 @@
   width: 1em;
   height: 1em;
   line-height: 1em;
-  vertical-align: middle;
+  vertical-align: -2px;
 }
 .@{fa-css-prefix}-stack-mini {
   position: absolute;
